# neutrino-detection

./: .gitignore  UCAS.sty  main.tex  show.tex
MKID_reactor_sim/: .README.swp  CMakeLists.txt  GNUmakefile  README  main.cc  reactor_flux.mac
MKID_reactor_sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
MKID_reactor_sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
calculation of neutron nuclei cross section/figures_xsec/: calc.py
neutrino detection signal/: data help tools.py  setting gen helper.py
neutrino detection signal/CEvNS/: event rate config.py  event rate config2.py  neutrino flux usage target comparision.py
neutrino detection signal/CEvNS/output/: test.ipynb
neutrino detection signal/NMM/: event rate ver config.py
neutrino detection signal/data/CSNS/: anti_nu_mu.csv  nu_e.csv  setting.json.dis
neutrino detection signal/data/Daya Bay/: IBD daya bay 10m.csv  IBD daya bay 500m.csv  calc_DayaBay_10m_with_uncertainty.csv  calc_DayaBay_25m_2cores.csv  calc_DayaBay_500m_with_uncertainty.csv  calc_relic_25m_1core.csv  reactor_neutrino_flux.csv  readme.txt  setting.json  setting.json.disable
neutrino detection signal/data/Solar/: 13N.csv  15O.csv  17F.csv  8B.csv  Be7&pep_gaussian_flux.csv  equal_flavor_solar_flux.csv  setting.json.disable  sum solar.py
neutrino detection signal/data/T2K/: T2K anti-nue.csv  T2K anti-numu.csv  T2K nue.csv  T2K numu.csv  setting_disable.json
neutrino detection signal/data/test/: setting_disable.json  test 10MeV data.csv  test data.csv  test simple.csv
